2006-10-19  Douglas Bates  <bates@stat.wisc.edu>

	* data/cbpp.rda, man/cbpp.Rd: Added Contagious Bovine
	Pleuropneumonia data contributed by Renaud Lancelot.

	* src: Martin fixed more C99 usages.

	* R/lmer.R (lmerFactorList): Throw an error if there are no random
	effects terms in the model formula. (Also added a test of this in
	tests/lmer.R)

2006-10-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (mkFltype): typo

	* DESCRIPTION (Version): Version 0.9975-7

	* R/lmer.R (lmer): Remove wtssqr.  Use weights correctly in the
	calls to dev.resids (problem reported by Renaud Lancelot).
	(mlirt): Change na.ignore to na.pass.

2006-10-16  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New version

	* R/lmer.R (resid): Methods for resid and residuals generics
	should distinguish between glmer and lmer classes.

2006-10-15  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.c (internal_mer_update_ZXy): double transpose to sort
	columns in ZtZ.

2006-10-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/glmer.c (glmer_linkinv): Repair code for probit link here
	and in a couple of other places.
	
2006-10-12  Douglas Bates  <bates@stat.wisc.edu>

	* src/glmer.c: pass and store family-link type allowing internal
	evaluation of link, linkinv, etc. for common families.

	* src/lmer.[ch],Wishart.[ch],lme4_utils.[ch]: Move utility
	functions from lmer.[ch] to make code structure cleaner.

2006-10-10  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION: Release 0.9975-3
	* src/lmer.c (Zt_carryOver): correct the calculation of nnz.

2006-09-27  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (lmer): Moved argument checking and construction of
	model matrices, etc. to auxillary functions for use with functions
	to fit more general models.  Changed default method for GLMMs to
	Laplace and default for usePQL to FALSE.

2006-09-22  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.c (mer_create and other functions and files): Change